--- a/index.html
+++ b/index.html
@@ -2,46 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three-Layer Dropdown Menu</title>
+    <title>Website with Nested Dropdown Menu</title>
     <link rel="stylesheet" type="text/css" href="style.css"> <!-- Link to external CSS -->
+    <link rel="stylesheet" type="text/css" href="nested_dropdown.css"> <!-- Link to external CSS -->
+    <link rel="stylesheet" type="text/css" href="navbar.css"> <!-- Link to external CSS -->
+    <script src="script.js"></script> <!-- Link to external JavaScript (optional) -->
 </head>
 <body>
-    <!-- Main dropdown menu -->
-    <div class="dropdown">
-        <button class="menu-button">Menu</button> <!-- Dark-themed button -->
-        <div class="dropdown-content">
-            <a href="#home">Home</a> <!-- No submenu -->
-            <a href="#services">Services</a> <!-- No submenu -->
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="navbar-content"> <!-- Group links and dropdown -->
+            <div class="dropdown"> <!-- Main dropdown menu -->
+                <button class="button-like">Menu</button> <!-- Styled button -->
+                <div class="dropdown-content"> <!-- Main dropdown content -->
+                    <a href="#home">Home</a> <!-- No submenu -->
+                    <a href="#services">Services</a> <!-- No submenu -->
 
-            <!-- First layer of nested submenu -->
-            <div class="dropdown-submenu">
-                <a href="#more" class="submenu-trigger">More</a> <!-- This is a submenu trigger -->
-                <div class="dropdown-submenu-content"> <!-- First nested submenu -->
-                    <a href="#option1">Option 1</a> <!-- No submenu -->
-                    <a href="#option2">Option 2</a> <!-- No submenu -->
-
-                    <!-- Second layer of nested submenu -->
+                    <!-- First layer of nested submenu -->
                     <div class="dropdown-submenu">
-                        <a href="#advanced" class="submenu-trigger">Advanced</a> <!-- Another submenu trigger -->
-                        <div class="dropdown-submenu-content"> <!-- Second nested submenu -->
-                            <a href="#optionA">Option A</a> <!-- No submenu -->
-                            <a href="#optionB">Option B</a> <!-- No submenu -->
+                        <a href="#more" class="submenu-trigger">More</a> <!-- Submenu trigger -->
+                        <div class="dropdown-submenu-content"> <!-- First nested submenu -->
+                            <a href="#option1">Option 1</a> <!-- No submenu -->
+                            <a href="#option2">Option 2</a>
 
-                            <!-- Third layer of nested submenu -->
+                            <!-- Second layer of nested submenu -->
                             <div class="dropdown-submenu">
-                                <a href="#deep" class="submenu-trigger">Deep Menu</a> <!-- Submenu trigger -->
-                                <div class="dropdown-submenu-content"> <!-- Third nested submenu -->
-                                    <a href="#deep1">Deep Option 1</a> <!-- No submenu -->
-                                    <a href="#deep2">Deep Option 2</a> <!-- No submenu -->
+                                <a href="#advanced" class="submenu-trigger">Advanced</a> <!-- Submenu trigger -->
+                                <div class="dropdown-submenu-content"> <!-- Second nested submenu -->
+                                    <a href="#optionA">Option A</a>
+                                    <a href="#optionB">Option B</a>
+
+                                    <!-- Third layer of nested submenu -->
+                                    <div class="dropdown-submenu">
+                                        <a href="#deep" class="submenu-trigger">Deep Menu</a> <!-- Third submenu trigger -->
+                                        <div class="dropdown-submenu-content"> <!-- Third nested submenu -->
+                                            <a href="#deep1">Deep Option 1</a> <!-- No submenu -->
+                                            <a href="#deep2">Deep Option 2</a> <!-- No submenu -->
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    <a href="#contact">Contact</a> <!-- No submenu -->
                 </div>
             </div>
 
-            <a href="#contact">Contact</a> <!-- No submenu -->
+            <a href="#about" class="button-like">About</a> <!-- Styled like a button -->
         </div>
-    </div>
+
+        <div class="navbar-logo">My Website</div> <!-- Logo on the right -->
+    </nav>
+
+    <!-- Main Content -->
+    <header>
+        <h1>Welcome to My Website</h1>
+        <p>This is a basic website with a nested dropdown menu.</p>
+    </header>
+
+    <main>
+        <h2>Main Content</h2>
+        <p>This section can contain various elements like text, images, or other components for the website's main content.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p> <!-- Basic footer content -->
+    </footer>
 </body>
 </html>
